# DocuRAG-AI-Agent

./: .env.example  .gitignore  api_routes.py  auth_routes.py  auth_service.py  chunk_search.py  chunk_service.py  custom_types.py  data_loader.py  document_routes.py  email_service.py  file_storage.py  google_oauth.py  main.py  models.py  pyproject.toml  pytest.ini  setup_auth_db.py  streamlit_app.py  vector_db.py
docs/: METHODOLOGY.md  chat_document_architecture.md  document_upload_plan.md  implementation_plan.md  landing-page-plan.md  m0_authentication_requirements.md  mongodb_migration_plan.md  react_frontend_plan.md  task.md  workspace_architecture_plan.md
docs/m1-core-data-model/: api_reference.md  requirements.md  tasks.md  walkthrough.md
docs/m2-ingestion-pipeline/: requirements.md  tasks.md  walkthrough.md
docs/m3-query-integration/: requirements.md  tasks.md  walkthrough.md
docs/m4-frontend-chat-upload/: implementation_plan.md.resolved  requirements.md  tasks.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatArea.tsx  ChatMessage.tsx  (+13 more)
tests/: test_api_routes.py  test_auth.py  test_auth_quality.py  test_availability_speed.py  test_document_api.py  test_document_quality.py  test_documents.py  test_file_storage.py  test_ingestion.py  test_ingestion_quality.py  test_inngest.py  test_integration.py  test_models.py  test_query_integration.py  test_robustness.py  test_scalability.py  test_security.py  test_streamlit.py  test_vector_db.py
(+22 files in other folders)
